# crolling_naver_finance_research_data

./: .gitignore  README.md  pyproject.toml
crolling_naver_finance_research_data/: crolling.py  crolling_2.py  crolling_3.py  crolling_pdf_to_txt.py  naver_finance_research.json
