[tool.poetry]
name = "crolling-naver-finance-research-data"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
pandas = "^2.2.2"
requests = "^2.32.3"
pypdf2 = "^3.0.1"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.1"
pandas-stubs = "^2.2.2.240603"
types-requests = "^2.32.0.20240712"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"


[tool.mypy]
python_version = 3.12
strict = true
